# hifuture-contest

./: .gitignore  README.md
cpp/: CMakeLists.txt  complete_logic.cpp  simplest.cpp
python/: funzionale.py  procedurale.py
rust/: Cargo.toml
rust/src/: main.rs
